--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.6"
   }
 }
