--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.3",
-    "react-toastify": "^9.1.3",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^2.0.0",
     "tailwindcss": "3.3.5",
